# NutEngine3D

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build.bat  run.bat  setup.bat
assets/scenes/: README.md  demo.nutscene  my_nano_game.nutscene  stress_children_3.nutscene  stress_children_4.nutscene  stress_children_4_scripts_3.nutscene  stress_children_5.nutscene  stress_children_5_scripts_3.nutscene  stress_children_6.nutscene  stress_children_8.nutscene  stress_children_mixed_6.nutscene  stress_draw_dual_sphere.nutscene  stress_edges_146_scripts_3.nutscene  stress_mixed_4_scripts_3.nutscene  stress_objects_4.nutscene  stress_scripts_4.nutscene  stress_spheres_4_scripts_3.nutscene  tunnel_run.nutscene
assets/scripts/: AutoTranslateScript.cpp  AutoTranslateScript.h  AutoTranslateWrapScript.cpp  AutoTranslateWrapScript.h  ClampPositionScript.cpp  ClampPositionScript.h  DummyScript.cpp  DummyScript.h  GameControllerScript.cpp  GameControllerScript.h  GameScriptDispatcher.cpp  GameScriptDispatcher.h  PlayerMoveScript.cpp  PlayerMoveScript.h  PulseScaleScript.cpp  PulseScaleScript.h  README.md  ScriptCatalog.h  SpinScript.cpp  SpinScript.h  TunnelRunScript.cpp  TunnelRunScript.h  WrapPositionScript.cpp  WrapPositionScript.h
docs/: pipeline.md
scene_editor/: build.bat  main.cpp  run.bat
src/: main.cpp
src/core/: Camera.h  CompiledScriptInstance.h  Engine.h  FixedVector.h  GameObject.h  InputState.h  Mesh.h  NanoRuntimeConfig.h  ObjLoader.cpp  ObjLoader.h  Object3D.h  RuntimeLimits.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Script.cpp  Script.h  Transform.h  World.h
src/game_scripts/: DummyScript.cpp  DummyScript.h  SpinScript.cpp  SpinScript.h
src/math/: Mat4.h  MathUtils.h  Vec2.h  Vec3.h
src/render/: Graphics.h  RaylibGraphics.h  WireframeRenderer.h
src/scene/: Json.cpp  Json.h  LoadedScene.cpp  LoadedScene.h  RuntimeScene.cpp  RuntimeScene.h  SceneBinaryLoader.cpp  SceneBinaryLoader.h  SceneLoader.cpp  SceneLoader.h  ScriptRegistry.cpp  ScriptRegistry.h
targets/desktop/: RaylibGraphics.h  build.bat  main.cpp  run.bat
targets/nano/: README.md  compile_demo_scene.bat  platformio.ini
targets/nano/src/: NanoAllocator.cpp  NanoDisplayAdapter.h  NanoEngineRuntime.cpp  NanoGraphics.h  NanoNoHeap.cpp  NanoWireframeRenderer.h  NutEngineRuntime.cpp  NutNanoDisplayAdapter.h  NutNanoGraphics.h  main.cpp
tools/scene_compiler/: CMakeLists.txt  README.md  ScenePipeline.cpp  ScenePipeline.h  build.bat  main.cpp  run.bat  run_scene.bat
tools/scene_editor/: README.md  build.bat  main.cpp  nutscene_editor.ini  run.bat
tools/scene_editor/src/: EditorBuildSettings.cpp  EditorBuildSettings.h  EditorSceneCatalog.cpp  EditorSceneCatalog.h  EditorUtils.cpp  EditorUtils.h  main.cpp
